# intract

./: Cargo.toml  build_frontend.sh  package-lock.json  package.json  readme.md
.github/: clippy_check.yml
.github/migrations/2023-06-29-150356_initial/: down.sql
.github/migrations/2023-07-01-075129_use_enum_for_powerlevel/: down.sql  up.sql
.github/migrations/2023-07-01-095246_store-salt/: up.sql
.github/migrations/2023-07-01-113645_unique_username/: down.sql  up.sql
.github/src/: main.rs  pass.rs
.github/workflows/: clippy_check.yml  codecov.yml  test.yml
backend/: .env  Cargo.toml
backend/migrations/2023-07-01-095246_store-salt/: down.sql
backend/migrations/2023-07-01-095816_store-password-as-text/: down.sql
backend/migrations/2023-07-01-204536_force_session_timestamp/: down.sql  up.sql
backend/src/: config.rs  docs.rs  extractors.rs  main.rs  pass.rs  schema.rs
backend/src/api/: mod.rs
backend/src/cli/: mod.rs
backend/src/db/: models.rs
migrations/2023-06-29-150356_initial/: up.sql
migrations/2023-07-01-095816_store-password-as-text/: up.sql
migrations/2023-07-07-092531_dont_store_creator_in_regular_feed/: down.sql  up.sql
migrations/2023-07-08-193653_add_timestamps/: down.sql  up.sql
migrations/2023-07-09-081820_store-time-to-update/: down.sql  up.sql
migrations/2023-07-09-084227_oops/: down.sql  up.sql
migrations/2023-07-09-124901_fuck!/: down.sql  up.sql
migrations/2023-07-09-151710_hide_feeds/: down.sql  up.sql
src/: config.rs  docs.rs  frontend.rs  main.rs  schema.rs  state.rs
src/api/: mod.rs
src/api/v1/: account.rs  mod.rs  server.rs
src/cli/: mod.rs  user.rs
src/db/: mod.rs  models.rs
src/feeds/: mod.rs
src/middleware/: guard.rs
src/tests/: mod.rs
web/: .eslintrc.js  README.md  package-lock.json  package.json  vue.config.js
web/src/: App.vue  main.ts
web/src/api/: index.ts
(+58 files in other folders)
