[package]
description = "intract is an rss reader for the modern web"
edition = "2021"
name = "intract"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = {version = "0.11", features = [
  "axum",
  "axum-extra",
  "redoc",
  "macros",
  "axum-ws",
  "axum-multipart",
  "axum-headers",
  "axum-extra-cookie",
  "axum-extra-cookie-private",
  "axum-extra-form",
  "axum-extra-query",
]}
anyhow = "1.0.71"
argon2 = {version = "0.5.0", features = ["std"]}
axum = "0.6"
axum-jsonschema = {version = "0.6", features = ["aide"]}
axum-macros = "0.3"
bb8 = "0.8"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4", features = ["cargo", "derive"]}
confy = "0.5.1"
diesel = {version = "2", features = ["postgres", "uuid"]}
diesel-async = {version = "0.3", features = ["postgres", "bb8"]}
diesel-derive-enum = {version = "2", features = ["postgres"]}
diesel_migrations = {version = "2", features = ["postgres"]}
feed-rs = "1.3.0"
hyper = "0.14.27"
indexmap = "1"
mime_guess = "2.0.4"
once_cell = "1"
rand = "0.8.5"
reqwest = {version = "0.11", features = ["rustls-tls", "deflate", "gzip", "brotli", "json"], default-features = false}
rust-embed = {version = "6", features = ["compression", "axum", "tokio"]}
schemars = {version = "0.8", features = ["derive_json_schema", "uuid1"]}
serde = {version = "1", features = ["derive", "rc"]}
serde_json = "1"
serial_test = "2.0.0"
tokio = {version = "1", features = ["full"]}
tower = "0.4.13"
tower-http = {version = "0.4", features = ["compression-gzip", "trace", "cors", "timeout"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "ansi"]}
uuid = {version = "1.4", features = ["serde", "v7", "fast-rng"]}
